refactor: Add jsonl to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### Data ###
+*.jsonl
+
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python,osx,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python,osx,linux
 
